--- a/app/src/index.css
+++ b/app/src/index.css
@@ -1,5 +1,14 @@
+html,
 body {
+  min-height: 100%;
+  padding: 0;
   margin: 0;
+}
+
+body {
+  background: url(./assets/images/home-page-background.jpg) bottom center no-repeat;
+  background-size: cover;
+  height: 100vh;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
