Remove bootstrap, create hook nav, add scroll

--- a/app/src/components/contact-screen/contact-screen.scss
+++ b/app/src/components/contact-screen/contact-screen.scss
@@ -1,6 +1,6 @@
 @import '../../utilities/sass-variables/sass-variables.scss';
 
-.about-section {
+.contact-section {
     height: calc(100vh - 50px);
     color: #fff;
     background-color: #333;
