--- a/app/src/components/nav-bar/nav-bar.scss
+++ b/app/src/components/nav-bar/nav-bar.scss
@@ -1,5 +1,35 @@
-#navbar {
-    a {
-        color: #ffffff;
+.fixed-nav {
+    width: 100%;
+    height: 50px;
+    position: fixed;
+    top: 0;
+    left: 0;
+    nav {
+        height: 100%;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        background-color: rgba(0,0,0,0);
+        color: #fff;
+        .header {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            flex-direction: column;
+            padding-left: 25px;
+        }
+        .nav-bar {
+            width: 25%;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            flex-direction: row;
+            .page-link {
+                margin-right: 20px;
+                &:hover {
+                    cursor: pointer;
+                } 
+            }
+        }
     }
 }
