--- a/app/src/components/projects-screen/projects-screen.scss
+++ b/app/src/components/projects-screen/projects-screen.scss
@@ -1,6 +1,6 @@
 @import '../../utilities/sass-variables/sass-variables.scss';
 
-.about-section {
+.projects-section {
     height: calc(100vh - 50px);
     color: #fff;
     background-color: #333;
