--- a/app/src/App.scss
+++ b/app/src/App.scss
@@ -1,3 +1,13 @@
 // .App {
 //   height: calc(100vh - 75px);
 // }
+
+#root {
+    background:
+    linear-gradient(to bottom, rgba(0, 0, 0, .75), rgba(0, 0, 0, .25)),
+    url(./assets/images/home-page-background.jpg);
+    background-size: cover;
+    background-position: bottom;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+}
