--- a/app/src/components/contact-screen/contact-screen.scss
+++ b/app/src/components/contact-screen/contact-screen.scss
@@ -1,7 +1,8 @@
 @import '../../utilities/sass/sass-variables.scss';
+@import '../../utilities/sass/shared.scss';
 
 .contact-section {
     height: calc(100vh - 50px);
     color: #fff;
-    background-color: #333;
+    background-color: rgba(255, 255, 255, 0);
 }
