--- a/app/src/components/landing-screen/landing-screen.scss
+++ b/app/src/components/landing-screen/landing-screen.scss
@@ -1,12 +1,13 @@
 @import '../../utilities/sass/sass-variables.scss';
+@import '../../utilities/sass/shared.scss';
 
 .landing-section {
     height: 100vh;
     display: flex;
     flex-direction: column;
-    background: 
-    linear-gradient(to bottom, rgba(0, 0, 0, .75), rgba(0, 0, 0, .25)),
-    url(../../assets//images/home-page-background.jpg) bottom center no-repeat;
+    // background: 
+    // linear-gradient(to bottom, rgba(0, 0, 0, .75), rgba(0, 0, 0, .25)),
+    // url(../../assets//images/home-page-background.jpg) bottom center no-repeat;
     background-size: cover;
     .landing-flex {
         height: calc(100vh - 250px);
