--- a/app/src/components/projects-screen/projects-screen.scss
+++ b/app/src/components/projects-screen/projects-screen.scss
@@ -1,8 +1,9 @@
 @import '../../utilities/sass/sass-variables.scss';
+@import '../../utilities/sass/shared.scss';
 
 .projects-section {
     height: 100vh;
     color: #fff;
-    background-color: #333;
+    background-color: rgba(255, 255, 255, 0);
     padding-top: 50px;
 }
