--- a/app/src/components/about-screen/about-screen.scss
+++ b/app/src/components/about-screen/about-screen.scss
@@ -27,6 +27,10 @@
             width: 25vw;
             max-width: 33%;
         }
+        @include lg {
+            width: 20vw;
+            max-width: 25%;
+        }
     }
     .elevator-pitch {
         width: 90%;
