--- a/app/src/components/nav-bar/nav-bar.scss
+++ b/app/src/components/nav-bar/nav-bar.scss
@@ -1,3 +1,5 @@
+@import '../../utilities/sass/sass-variables.scss';
+
 .fixed-nav {
     width: 100%;
     height: 50px;
@@ -9,14 +11,26 @@
         display: flex;
         flex-direction: row;
         justify-content: space-between;
-        background-color: rgba(0,0,0,0);
+        background-color: #000;
         color: #fff;
+        font-size: 12px;
+        @include sm {
+            background-color: rgba(255,255,255,0);
+            font-size: 16px;
+        }
+        @include md {
+            font-size: 18px;
+        }
         .header {
             display: flex;
             justify-content: center;
             align-items: center;
             flex-direction: column;
-            padding-left: 25px;
+            padding-left: 10px;
+            white-space: nowrap;
+            @include sm {
+                padding-left: 25px;
+            }
         }
         .nav-bar {
             display: flex;
@@ -24,10 +38,14 @@
             align-items: center;
             flex-direction: row;
             .page-link {
-                margin-right: 25px;
+                margin-right: 12px;
                 &:hover {
                     cursor: pointer;
-                } 
+                }
+                @include sm {
+                    margin-right: 25px;
+                }
+            
             }
         }
     }
