--- a/app/src/components/contact-screen/contact-screen.scss
+++ b/app/src/components/contact-screen/contact-screen.scss
@@ -5,4 +5,50 @@
     height: calc(100vh - 50px);
     color: #fff;
     background-color: rgba(255, 255, 255, 0);
+
+    .contact-form-flex {
+        display: flex;
+        flex-direction: column;
+        .flex-row {
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+            padding: 20px 0;
+            @include sm {
+                flex-direction: row;
+            }
+            input {
+                height: 20px;
+                width: 95%;
+                border-radius: 5px;
+                padding: 10px;
+                @include sm {
+                    width: 33%;
+                }
+                &:focus-visible {
+                    outline: none;
+                    border-color: #00ffff;
+                }
+            }
+        }
+        textarea {
+            height: 90px;
+            padding: 10px;
+            &:focus-visible {
+                outline: none;
+                border-color: #00ffff;
+            }
+        }
+        .submit-btn {
+            margin-top: 30px;
+            color: #fff;
+            background-color: #007bff;
+            border-color: #007bff;
+            width: 100%;
+            align-self: center;
+            @include sm {
+                width: 50%;
+            }
+        }
+    }
 }
