--- a/app/src/components/contact-screen/contact-screen.scss
+++ b/app/src/components/contact-screen/contact-screen.scss
@@ -6,6 +6,15 @@
     color: #fff;
     background-color: rgba(255, 255, 255, 0);
 
+    h4 {
+        text-align: center;
+        color: red;
+    }
+
+    h3 {
+        text-align: center;
+    }
+
     .contact-form-flex {
         display: flex;
         flex-direction: column;
