--- a/app/src/components/footer/footer.scss
+++ b/app/src/components/footer/footer.scss
@@ -1,7 +1,12 @@
+@import '../../utilities/sass/sass-variables.scss';
+
 #footer {
     position: relative;
     background: #000;
-    padding: 70px 0 50px 0;
+    padding: 35px 0 20px 0;
+    @include sm {
+        padding: 70px 0 50px 0;
+    }
     .icon-wrap {
         display: flex;
         flex-direction: row;
@@ -10,6 +15,56 @@
         a {
             text-decoration: none;
             color: white;
+            margin: 0 25px;
+            svg {
+                height: 30px;
+                width: 30px;
+                @include sm {
+                    height: 50px;
+                    width: 50px;
+                }
+            }
+            &:hover {
+                background: #555;
+            }
+        }
+    }
+    .copyright {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        position: relative;
+        top: 15px;
+        font-size: 10px;
+        color: #8f9aa7;
+        svg {
+            align-items: center;
+        }
+        @include sm {
+            top: 30px;
+            font-size: 14px;
+        }
+    }
+    .chevron-up {
+        svg {
+            fill: white;
+            position: absolute;
+            padding: 5px;
+            background: #333;
+            top: -15px;
+            left: 0;
+            right: 0;
+            margin: 0 auto;
+            font-size: 24px;
+            &:hover {
+                cursor: pointer;
+                background: #444;
+            }
+            @include sm {
+                padding: 10px;
+                top: -25px;
+                font-size: 35px;
+            }
         }
     }
 }
