--- a/app/src/components/contact-screen/contact-screen.scss
+++ b/app/src/components/contact-screen/contact-screen.scss
@@ -70,6 +70,43 @@
             @include sm {
                 width: 50%;
             }
+            &:disabled {
+                opacity: 0.75;
+            }
+        }
+      
+        .lds-hourglass {
+            display: inline-block;
+            position: relative;
+            top: -42px;
+            left: 65px;
+            right: 0;
+            margin: 0 auto;
+        }
+          .lds-hourglass:after {
+            content: " ";
+            display: block;
+            border-radius: 50%;
+            width: 0;
+            height: 0;
+            margin: 8px;
+            box-sizing: border-box;
+            border: 15px solid #fff;
+            border-color: #fff transparent #fff transparent;
+            animation: lds-hourglass 1.2s infinite;
+        }
+        @keyframes lds-hourglass {
+            0% {
+                transform: rotate(0);
+                animation-timing-function: cubic-bezier(0.55, 0.055, 0.675, 0.19);
+            }
+            50% {
+                transform: rotate(900deg);
+                animation-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1);
+            }
+            100% {
+                transform: rotate(1800deg);
+            }
         }
     }
 }
