restyled section headers, fixed some css bugs

--- a/app/src/App.scss
+++ b/app/src/App.scss
@@ -11,3 +11,8 @@
     background-repeat: no-repeat;
     background-attachment: fixed;
 }
+
+@font-face {
+    font-family: 'Bebas-Neue';
+    src: local('Bebas-Neue'), url(./assets/fonts/BebasNeue-Regular.ttf) format('truetype');
+}
