--- a/app/src/components/contact-screen/contact-screen.scss
+++ b/app/src/components/contact-screen/contact-screen.scss
@@ -5,6 +5,10 @@
     height: calc(60vh - 50px);
     color: #fff;
     background-color: rgba(255, 255, 255, 0);
+    padding-bottom: 50px;
+    @include sm {
+        padding-bottom: 20px;
+    }
 
     h4 {
         text-align: center;
@@ -22,7 +26,7 @@
             display: flex;
             flex-direction: column;
             justify-content: space-between;
-            padding: 20px 0;
+            padding-bottom: 20px;
             @include sm {
                 flex-direction: row;
             }
