--- a/app/src/utilities/sass/shared.scss
+++ b/app/src/utilities/sass/shared.scss
@@ -1,10 +1,26 @@
 .section-header {
-    font-size: 36px;
+    font-family: Bebas-Neue, Arial;
+    font-size: 26pt;
     display: flex;
+    flex-direction: column;
     align-items: center;
-    justify-content:center;
+    justify-content: center;
     text-transform: uppercase;
+    padding-bottom: 30px;
+    @include sm {
+        font-size: 36pt;
+    }
+    .section-header-bar {
+        background: #fff;
+        height: 3px;
+        width: 50px;
+        @include sm {
+            height: 4px;
+            width: 70px;
+        }
+    }
 }
+
 
 .container {
     padding-right: 15px;
