navbar item hover and submit hover css changes

--- a/app/src/components/nav-bar/nav-bar.scss
+++ b/app/src/components/nav-bar/nav-bar.scss
@@ -41,6 +41,7 @@
                 margin-right: 12px;
                 &:hover {
                     cursor: pointer;
+                    color: #00ffff;
                 }
                 @include sm {
                     margin-right: 25px;
