--- a/app/src/components/contact-screen/contact-screen.scss
+++ b/app/src/components/contact-screen/contact-screen.scss
@@ -77,6 +77,9 @@
             &:disabled {
                 opacity: 0.75;
             }
+            &:hover {
+                cursor: pointer;
+            }
         }
       
         .lds-hourglass {
