--- a/app/src/components/nav-bar/nav-bar.scss
+++ b/app/src/components/nav-bar/nav-bar.scss
@@ -11,7 +11,6 @@
         display: flex;
         flex-direction: row;
         justify-content: space-between;
-        background-color: #000;
         color: #fff;
         font-size: 12px;
         @include sm {
@@ -33,10 +32,13 @@
             }
         }
         .nav-bar {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            flex-direction: row;
+            display: none;
+            @include sm {
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                flex-direction: row;
+            }
             .page-link {
                 margin-right: 12px;
                 &:hover {
@@ -81,6 +83,106 @@
                             color: black;
                             cursor: pointer;
                         }
+                    }
+                }
+            }
+        }
+        .mobile-nav-toggle {
+            display: block;
+            position: relative;
+            top: 10px;
+            right: 25px;
+            -webkit-user-select: none;
+            user-select: none;
+            @include sm {
+                display: none;
+            }
+            input {
+                display: block;
+                width: 30px;
+                height: 25px;
+                position: absolute;
+                top: 0px;
+                right: -15px;
+
+                opacity: 0;
+                z-index: 2;
+                -webkit-touch-callout: none;
+                &:checked ~ span {
+                    opacity: 1;
+                    transform: rotate(45deg) translate(1px, 3px);
+                    background: #fff;
+                    // margin: 3px;
+                    &:nth-last-child(2) {
+                        transform: rotate(-45deg) translate(0, -1px);
+                    }
+                    &:nth-last-child(3) {
+                        opacity: 0;
+                        transform: rotate(0deg) scale(0.2, 0.2);
+                    }
+                }
+                &:checked ~ #mobile-menu {
+                    transform: none;
+                }
+            }
+            span {
+                display: block;
+                width: 26px;
+                height: 4px;
+                margin: 0 -10px 5px auto;
+                position: relative;
+                top: 3px;
+                left: auto;
+                right: 0;
+                
+                background: #fff;
+                border-radius: 3px;
+                
+                z-index: 1;
+                
+                transform-origin: 4px 0px;
+                
+                transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
+                            background 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
+                            opacity 0.55s ease,
+                            margin 0.5s;
+                &:first-child {
+                    transform-origin: 0% 0%;
+                }
+                &:nth-last-child(2) {
+                    transform-origin: 0% 100%;
+                }
+            }
+            #mobile-menu {
+                position: absolute;
+                top: -10px;
+                right: -25px;
+                width: 50vw;
+                height: 100vh;
+                margin: 0;
+                background:#000;
+
+                list-style-type: none;
+                -webkit-font-smoothing: antialiased;
+                /* to stop flickering of text in safari */
+                
+                transform-origin: 0% 0%;
+                transform: translate(100%, 0);
+                
+                transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0);
+
+                .page-link-padding {
+                    height: 100%;
+                    padding: 50px 10px;
+                }
+
+                .page-link {
+                    text-align: right;
+                    transition: color 0.3s ease;
+                    line-height: 3;
+                    font-size: 18px;
+                    &:hover {
+                        color: #00ffff;
                     }
                 }
             }
