name is required on contact form

--- a/app/src/components/contact-screen/contact-screen.scss
+++ b/app/src/components/contact-screen/contact-screen.scss
@@ -76,6 +76,9 @@
             }
             &:disabled {
                 opacity: 0.75;
+                &:hover {
+                    cursor: not-allowed;
+                }
             }
             &:hover {
                 cursor: pointer;
