--- a/app/src/components/project-modal/project-modal.scss
+++ b/app/src/components/project-modal/project-modal.scss
@@ -1,3 +1,5 @@
+@import '../../utilities/sass/sass-variables.scss';
+
 .modal {
     position: fixed;
     overflow: hidden;
@@ -6,7 +8,7 @@
     bottom: 0;
     left: 0;
     background-color: rgba(0, 0, 0, 0.65);
-    width: 50vw;
+    width: 85vw;
     height: 50vh;
     display: flex;
     align-items: center;
@@ -15,6 +17,12 @@
     z-index: 999999;
     box-sizing: border-box;
     margin: auto;
+    @include lg {
+      width: 65vw;
+      max-width: 1113px;
+      height: 50vh;
+      max-height: 645px;
+    }
 
     .modal-close {
         position: absolute;
@@ -36,6 +44,7 @@
         box-sizing: border-box;
         display: inline-block;
         text-align: center;
+        
         &:hover {
             background: rgba(255, 255, 255, 0.989);
         }
@@ -54,20 +63,22 @@
         padding: 15px 20px;
         color: #c3c0c0;
       }
-      .modal-fade {
+
+    .modal-fade {
         animation: fade-in 1s 1 linear;
         animation-fill-mode: forwards;
         opacity: 0;
-      }
-      .modal-overlay {
+    }
+
+    .modal-overlay {
         width: 100%;
         height: 100%;
         position: absolute;
         top: 0;
         left: 0;
-      }
+    }
   }
-  
+
   @keyframes fade-in {
     0% {
       animation-timing-function: cubic-bezier(0.2242, 0.7499, 0.3142, 0.8148);
