--- a/app/src/components/projects-screen/projects-screen.scss
+++ b/app/src/components/projects-screen/projects-screen.scss
@@ -2,8 +2,41 @@
 @import '../../utilities/sass/shared.scss';
 
 .projects-section {
-    height: 100vh;
+    min-height: 100vh;
     color: #fff;
     background-color: rgba(255, 255, 255, 0);
     padding-top: 50px;
+    .project-gallery {
+        width: 100%;
+        .project-cards {
+            display: flex;
+            flex-wrap: wrap;
+            flex-direction: column;
+
+            @include sm {
+                flex-direction: row;
+            }
+            .card {
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                flex-direction: column;
+                height: 200px;
+                background: rgba(255, 255, 255, 0.4);
+                margin: 10px;
+
+                @include sm {
+                    flex-basis: calc(50% - 20px);
+                }
+                @include md {
+                    flex-basis: calc(50% - 40px);
+                    height: 300px;
+                    margin: 20px;
+                }
+                &:hover {
+                    cursor: pointer;
+                }
+            }
+        }
+    }
 }
