--- a/app/src/components/project-modal/project-modal.scss
+++ b/app/src/components/project-modal/project-modal.scss
@@ -13,69 +13,109 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    padding: 1.5em 1em;
     z-index: 999999;
     box-sizing: border-box;
     margin: auto;
+    padding: 30px;
     @include lg {
-      width: 65vw;
+      width: 70vw;
       max-width: 1113px;
-      height: 50vh;
+      height: 100vh;
       max-height: 645px;
     }
 
     .modal-close {
-        position: absolute;
-        right: 15px;
-        top: 10px;
-        color: #5e5e5e;
-        cursor: pointer;
-        font-size: 1.25em;
-        padding: 7px;
-        background: rgba(255, 255, 255, 0.749);
-        border: 1px solid #c3c0c0;
-        border-radius: 50%;
-        width: 42px;
-        height: 42px;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        z-index: 999999;
-        box-sizing: border-box;
-        display: inline-block;
-        text-align: center;
-        
-        &:hover {
-            background: rgba(255, 255, 255, 0.989);
-        }
+      position: absolute;
+      right: 15px;
+      top: 10px;
+      color: #5e5e5e;
+      cursor: pointer;
+      font-size: 1.25em;
+      padding: 7px;
+      background: rgba(255, 255, 255, 0.749);
+      border: 1px solid #c3c0c0;
+      border-radius: 50%;
+      width: 42px;
+      height: 42px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      z-index: 999999;
+      box-sizing: border-box;
+      display: inline-block;
+      text-align: center;
+      
+      &:hover {
+          background: rgba(255, 255, 255, 0.989);
+      }
     }
 
     .modal-body {
-        z-index: 2;
-        position: relative;
-        margin: 0 auto;
-        background-color: #303030;
-        border: 1px solid rgba(255, 255, 255, 0.25);
-        border-radius: 3px;
-        overflow-x: hidden;
-        overflow-y: auto;
-        max-height: 100%;
-        padding: 15px 20px;
-        color: #c3c0c0;
+      display: flex;
+      flex-direction: column;
+      width: 100%;
+      height: 100%;
+      z-index: 2;
+      position: relative;
+      color: #fff;
+      .project1-gif {
+        height: 100%;
+        width: 100%;
+        background: url('https://media1.giphy.com/media/SggILpMXO7Xt6/giphy.gif') center center/cover;
       }
+      .project-description {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 33%;
+      }
+      .project-btns {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-around;
+        align-items: center;
+        padding: 20px 0;
+        .project-link-btn {
+          padding: 15px 40px;
+          background: #007bff;
+          &:hover {
+            cursor: pointer;
+          }
+        }
+        .project-source-btn {
+          padding: 15px 40px;
+          background: #007bff;
+          &:hover {
+            cursor: pointer;
+          }
+        }
+        .discord-btn {
+          display: flex;
+          flex-direction: column;
+          padding: 6px 40px;
+          background: #007bff;
+          &:hover {
+            cursor: pointer;
+          }
+          span {
+            font-size: 0.75rem;
+          }
+        }
+      }
+    }
 
     .modal-fade {
-        animation: fade-in 1s 1 linear;
-        animation-fill-mode: forwards;
-        opacity: 0;
+      animation: fade-in 1s 1 linear;
+      animation-fill-mode: forwards;
+      opacity: 0;
     }
 
     .modal-overlay {
-        width: 100%;
-        height: 100%;
-        position: absolute;
-        top: 0;
-        left: 0;
+      width: 100%;
+      height: 100%;
+      position: absolute;
+      top: 0;
+      left: 0;
     }
   }
 
