--- a/src/App.scss
+++ b/src/App.scss
@@ -7,6 +7,9 @@
     linear-gradient(to bottom, rgba(0, 0, 0, .75), rgba(0, 0, 0, .25)),
     url(./assets/images/home-page-background.jpg);
     background-size: cover;
+    -moz-background-size: cover;
+    -webkit-background-size: cover;
+    -o-background-size: cover;
     background-position: bottom;
     background-repeat: no-repeat;
     background-attachment: fixed;
