--- a/src/App.scss
+++ b/src/App.scss
@@ -1,18 +1,21 @@
-// .App {
-//   height: calc(100vh - 75px);
-// }
+@import './utilities/sass/sass-variables.scss';
 
 #root {
-    background:
-    linear-gradient(to bottom, rgba(0, 0, 0, .75), rgba(0, 0, 0, .25)),
-    url(./assets/images/home-page-background.jpg);
-    background-size: cover;
-    -moz-background-size: cover;
-    -webkit-background-size: cover;
-    -o-background-size: cover;
-    background-position: bottom;
-    background-repeat: no-repeat;
-    background-attachment: fixed;
+    &:after {
+        content:"";
+        position:fixed;
+        top:0;
+        height:100vh;
+        left:0;
+        right:0;
+        z-index:-1;
+        background: linear-gradient(to bottom, rgba(0, 0, 0, .75), rgba(0, 0, 0, .25)), url(./assets/images/home-page-background.jpg) center center;
+        -webkit-background-size: cover;
+        -moz-background-size: cover;
+        -o-background-size: cover;
+        background-size: cover;
+        background-position: bottom;
+    }
 }
 
 @font-face {
