Fix modals to be responsive, cleaned up design

--- a/src/components/landing-screen/landing-screen.scss
+++ b/src/components/landing-screen/landing-screen.scss
@@ -34,7 +34,7 @@
                 display: flex;
                 flex-direction: row;
             }
-            .about-me-button {
+            .project-button {
                 margin-top: 50px;
                 &:hover {
                     cursor: pointer;
@@ -46,6 +46,7 @@
                     display: flex;
                     align-items: center;
                     background: #007bff;
+                    z-index: 0;
                     @include sm {
                         background: none;
                     }
