--- a/src/components/project-modal/project-modal.scss
+++ b/src/components/project-modal/project-modal.scss
@@ -1,6 +1,6 @@
 @import '../../utilities/sass/sass-variables.scss';
 
-.modal {
+.modal-wrap {
     position: fixed;
     overflow: hidden;
     top: 0;
@@ -8,32 +8,32 @@
     bottom: 0;
     left: 0;
     background-color: rgba(0, 0, 0, 0.65);
-    width: 85vw;
-    height: 50vh;
+    width: 100vw;
+    height: 100vh;
     display: flex;
     align-items: center;
     justify-content: center;
-    z-index: 999999;
     box-sizing: border-box;
     margin: auto;
-    padding: 30px;
-    @include lg {
-      width: 70vw;
-      max-width: 1113px;
-      height: 100vh;
-      max-height: 645px;
+
+    .modal {
+      width: 700px;
+      padding: 20px;
+      @include sm {
+        height: 75vh;
+        padding: 0px;
+      }
     }
 
     .modal-close {
       position: absolute;
-      right: 15px;
-      top: 10px;
+      right: 20px;
+      top: 20px;
       color: #5e5e5e;
       cursor: pointer;
-      font-size: 1.25em;
+      font-size: 1.5em;
       padding: 7px;
       background: rgba(255, 255, 255, 0.749);
-      border: 1px solid #c3c0c0;
       border-radius: 50%;
       width: 42px;
       height: 42px;
@@ -44,6 +44,12 @@
       box-sizing: border-box;
       display: inline-block;
       text-align: center;
+
+      @include lg {
+        position: relative;
+        left: 725px;
+        top: -10px;
+      }
       
       &:hover {
           background: rgba(255, 255, 255, 0.989);
@@ -59,9 +65,12 @@
       position: relative;
       color: #fff;
       .project1-gif {
-        height: 100%;
+        min-height: 350px;
         width: 100%;
-        background: url('https://media1.giphy.com/media/SggILpMXO7Xt6/giphy.gif') center center/cover;
+        background: url('../../assets/gifs/discord-bot1.gif') no-repeat center/contain;
+        @include md {
+          min-height: 575px;
+        }
       }
       .project-description {
         display: flex;
@@ -75,12 +84,15 @@
         justify-content: space-around;
         align-items: center;
         padding: 20px 0;
-        @include sm {
+        @include md {
           flex-direction: row;
         }
         .btn {
           width: 50%;
           margin: 10px 0;
+          @include md {
+            width: auto;
+          }
         }
         .project-link-btn {
           padding: 15px 40px;
