--- a/src/components/contact-screen/contact-screen.scss
+++ b/src/components/contact-screen/contact-screen.scss
@@ -5,7 +5,7 @@
     height: calc(60vh - 50px);
     color: #fff;
     background-color: rgba(255, 255, 255, 0);
-    padding-bottom: 50px;
+    padding: 50px 0;
     @include sm {
         padding-bottom: 20px;
     }
