--- a/src/components/project-modal/project-modal.scss
+++ b/src/components/project-modal/project-modal.scss
@@ -27,7 +27,6 @@
     .modal {
       width: 700px;
       height: 100%;
-      padding-top: 25px;
       @include sm {
         height: 75vh;
         padding: 0px;
@@ -69,14 +68,16 @@
       .modal-body {
         display: flex;
         flex-direction: column;
-        justify-content: space-evenly;
         width: 100%;
         height: 100%;
         z-index: 2;
         position: relative;
         color: #fff;
+        @include short {
+          justify-content: center;
+        }
         .project-gifs {
-          min-height: 275px;
+          min-height: 290px;
           width: 100%;
           background: url('../../assets/gifs/discord-bot1.gif') no-repeat center/contain;
           @include sm {
