--- a/src/components/projects-screen/projects-screen.scss
+++ b/src/components/projects-screen/projects-screen.scss
@@ -17,9 +17,8 @@
                 flex-direction: row;
             }
             .card {
-                position: relative;
                 display: flex;
-                justify-content: center;
+                justify-content: space-evenly;
                 align-items: center;
                 flex-direction: column;
                 height: 200px;
@@ -27,6 +26,8 @@
                 background:rgba(255, 255, 255, 0.66);
 
                 @include sm {
+                    position: relative;
+                    justify-content: center;
                     flex-basis: calc(50% - 20px);
                 }
                 @include md {
@@ -38,24 +39,29 @@
                     cursor: pointer;
                 }
                 .discord-icon {
-                    height: 90%;
+                    height: 65%;
                     width: 100%;
                     fill: #7289DA;
+                    @include sm {
+                        height: 90%;
+                    }
                 }
                 img {
                     width: 75%;
                 }
                 .hover-hidden {
                     display: block;
-                    position: absolute;
-                    bottom: 10px;
                     @include sm {
+                        position: absolute;
+                        bottom: 10px;
                         display: none;
                     }
                 }
                 .hover-show {
-                    position: absolute;
-                    bottom: 10px;
+                    @include sm {
+                        position: absolute;
+                        bottom: 10px;
+                    }
                     .hover-title {
                         font-size: 24px;
                     }
