--- a/src/components/nav-bar/nav-bar.scss
+++ b/src/components/nav-bar/nav-bar.scss
@@ -4,8 +4,14 @@
     width: 100%;
     height: 50px;
     position: fixed;
-    top: 0;
+    bottom: 0;
+    background: #222;
     left: 0;
+    z-index: 1;
+    @include sm {        
+        background: none;
+        top: 0;
+    }
     nav {
         height: 100%;
         display: flex;
@@ -150,21 +156,20 @@
             }
             #mobile-menu {
                 position: absolute;
-                top: -10px;
+                bottom: 10px;
                 right: -25px;
-                width: 50vw;
-                height: 100vh;
+                width: 100vw;
+                height: 45vh;
                 margin: 0;
-                background:#000;
+                background:#222;
                 list-style-type: none;
                 -webkit-font-smoothing: antialiased;
                 /* to stop flickering of text in safari */
                 transform-origin: 0% 0%;
-                transform: translate(100%, 0);
+                transform: translate(0, 100%);
                 transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0);
                 .page-link-padding {
-                    height: 100%;
-                    padding: 50px 10px;
+                    padding-right: 10px;
                     .resume-dropdown {
                         position: absolute;
                         right: 0;
@@ -186,7 +191,6 @@
                         svg {
                             font-size: 24px;
                             padding: 5px 5px 0 0;
-                            color: #00ffff;
                         }
                     }
                 }
@@ -195,8 +199,15 @@
                     transition: color 0.3s ease;
                     line-height: 3;
                     font-size: 18px;
+                    display: flex;
+                    justify-content: flex-end;
+                    align-items: center;
                     &:hover {
                         color: #00ffff;
+                    }
+                    svg {
+                        margin-right: 12px;
+                        color: white;
                     }
                 }
             }
