--- a/src/components/project-modal/project-modal.scss
+++ b/src/components/project-modal/project-modal.scss
@@ -9,7 +9,7 @@
     left: 0;
     background-color: rgba(0, 0, 0, 0.85);
     width: 100vw;
-    height: 100vh;
+    height: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
