--- a/src/components/nav-bar/nav-bar.scss
+++ b/src/components/nav-bar/nav-bar.scss
@@ -2,7 +2,7 @@
 
 .fixed-nav {
     width: 100%;
-    height: 50px;
+    height: 70px;
     position: fixed;
     bottom: 0;
     background: #222;
@@ -96,8 +96,8 @@
         .mobile-nav-toggle {
             display: block;
             position: relative;
-            top: 10px;
-            right: 25px;
+            top: 20px;
+            right: 40px;
             -webkit-user-select: none;
             user-select: none;
             @include sm {
@@ -157,7 +157,7 @@
             #mobile-menu {
                 position: absolute;
                 bottom: 10px;
-                right: -25px;
+                right: -40px;
                 width: 100vw;
                 height: 45vh;
                 margin: 0;
@@ -169,17 +169,17 @@
                 transform: translate(0, 100%);
                 transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0);
                 .page-link-padding {
-                    padding-right: 10px;
+                    padding: 10px 10px 0 0;
                     .resume-dropdown {
                         position: absolute;
-                        right: 0;
+                        right: 15px;
                         ul {
                             list-style: none;
                             padding: 0;
                             margin: 0;
                         }
                         li {
-                            padding: 12px 5px;
+                            padding: 12px 20px;
                             text-align: right;
                         }
                     }
@@ -202,6 +202,7 @@
                     display: flex;
                     justify-content: flex-end;
                     align-items: center;
+                    padding-right: 25px;
                     &:hover {
                         color: #00ffff;
                     }
