--- a/src/components/projects-screen/projects-screen.scss
+++ b/src/components/projects-screen/projects-screen.scss
@@ -36,6 +36,7 @@
                     margin: 20px;
                 }
                 &:hover {
+                    background: rgba(255, 255, 255, .9);
                     cursor: pointer;
                 }
                 .discord-icon {
@@ -62,7 +63,11 @@
                         position: absolute;
                         bottom: 10px;
                     }
-                    .hover-title {
+                }
+                .hover-title {
+                    color: #000;
+                    font-size: 18px;
+                    @include sm {
                         font-size: 24px;
                     }
                 }
