--- a/src/components/nav-bar/nav-bar.scss
+++ b/src/components/nav-bar/nav-bar.scss
@@ -159,7 +159,7 @@
                 bottom: 10px;
                 right: -40px;
                 width: 100vw;
-                height: 45vh;
+                height: 70vh;
                 margin: 0;
                 background:#222;
                 list-style-type: none;
@@ -168,6 +168,12 @@
                 transform-origin: 0% 0%;
                 transform: translate(0, 100%);
                 transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0);
+                @include shorter {
+                    height: 60vh;
+                }
+                @include short {
+                    height: 45vh;
+                }
                 .page-link-padding {
                     padding: 10px 10px 0 0;
                     .resume-dropdown {
